src/objects/LG_Discount__c.object
<CustomObject>
    <fields>
        <fullName>LG_Active_Formula__c</fullName>
        <formula>IF( LG_Active__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Business__c</fullName>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SOHO</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>SOHO Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_CalculationType__c</fullName>
        <label>Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discount Reduced Value</fullName>
                </value>
                <value>
                    <fullName>Discount Percentage Off</fullName>
                </value>
                <value>
                    <fullName>Discount Amount Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ContractTerm__c</fullName>
        <label>Contract Term (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_DefaultDiscount_Formula__c</fullName>
        <formula>IF(LG_DefaultDiscount__c,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Discount Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_DefaultDiscount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_DiscountCode__c</fullName>
        <label>Discount Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DiscountMessage__c</fullName>
        <label>Discount Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DiscountType__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Promotional Action</fullName>
                </value>
                <value>
                    <fullName>Closing Deal</fullName>
                </value>
                <value>
                    <fullName>Porting Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_Months__c</fullName>
        <label>Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_RunningUserSalesChannel__c</fullName>
        <label>Running User Sales Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telesales Inbound</fullName>
                </value>
                <value>
                    <fullName>Telesales Outbound</fullName>
                </value>
                <value>
                    <fullName>Door-to-door</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Shops</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>MDU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promotion Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_ChangeType__c</fullName>
        <label>Change Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Porting-Out</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_ExternalId__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_OneOffPriceDiscount__c</fullName>
        <label>One Off Price Discount (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UM_ProductDefinitionsUsingDiscount__c</fullName>
        <label>Product Definitions Using Discount</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company Voice</fullName>
                    <default>true</default>
                    <label>Company Voice</label>
                </value>
                <value>
                    <fullName>Company Fiber</fullName>
                </value>
                <value>
                    <fullName>Company Internet</fullName>
                </value>
                <value>
                    <fullName>Digital TV</fullName>
                </value>
                <value>
                    <fullName>Mobilfunkprodukte</fullName>
                </value>
                <value>
                    <fullName>Office Internet</fullName>
                </value>
                <value>
                    <fullName>Wholesale Fiber</fullName>
                </value>
                <value>
                    <fullName>WLAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_RecurringPriceDiscount__c</fullName>
        <label>Recurring Price Discount (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Discount</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LG_Active__c</columns>
        <columns>LG_DiscountMessage__c</columns>
        <columns>LG_CalculationType__c</columns>
        <columns>LG_Business__c</columns>
        <columns>LG_DiscountType__c</columns>
        <columns>LG_ContractTerm__c</columns>
        <columns>LG_Months__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>